--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ checkstyle {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+    implementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.23.1'
 }
 
 test {
