--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,14 @@
 plugins {
-    id 'java'
+    id 'application'
     id 'checkstyle'
 }
 
 group 'hexlet.code'
 version '1.0-SNAPSHOT'
+
+application {
+    mainClass = 'hexlet.code.App'
+}
 
 repositories {
     mavenCentral()
