--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'application'
     id 'checkstyle'
+    id 'jacoco'
 }
 
 group 'hexlet.code'
@@ -25,6 +26,12 @@ dependencies {
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.23.1'
 }
 
+jacocoTestReport {
+    reports {
+        xml.required = true
+    }
+}
+
 test {
-    useJUnitPlatform()
+    finalizedBy jacocoTestReport
 }
