--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'application'
     id 'checkstyle'
     id 'jacoco'
+    id 'com.adarshr.test-logger' version '3.1.0'
 }
 
 group 'hexlet.code'
@@ -34,4 +35,8 @@ jacocoTestReport {
 
 test {
     finalizedBy jacocoTestReport
+}
+
+testlogger {
+    showStandardStreams true
 }
