--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,14 @@ dependencies {
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.23.1'
 }
 
+tasks.withType(Test) {
+    useJUnitPlatform()
+
+    testLogging {     // This is for logging and can be removed.
+        events("passed", "skipped", "failed")
+    }
+}
+
 jacocoTestReport {
     reports {
         xml.required = true
